* August 31st, 2018
** Added mini action drawer to selected headers for easier access to edit and focus buttons
* August 30th, 2018
** Moved undo button into the header
*** This is one step in a major UI overhaul
** Moved links to Github and Changelog into the settings page
* August 29th, 2018
** You can now swipe on headers to trigger common actions:
*** Swipe right to advance the todo state
*** Swipe left to remove the header
*** This only works on touchscreen devices
* August 28th, 2018
** Capture templates are now reorderable (just drag and drop!)
* August 23rd, 2018
** Added native support for cookies like [1/2] and [50%]
*** TODO Sample todo
*** DONE Another sample todo
*** They're also supported in plain checkbox lists [3/3] [100%]
- [X] item 1
- [X] item 2
- [X] item 3
* August 21st, 2018
** Added native support for plain lists and checkboxes
Plain lists:

- Example 1
- Example 2

Ordered lists:

1. Example 1
2. Example 2
20. [@20] Example 20

And checkboxes:

- [ ] checkbox 1
  - [ ] checkbox 2
    - [ ] checkbox 3
  - [X] checkbox 4
* August 18th, 2018
** Added capture templates
*** Now under Settings > Capture Templates you can specify capture templates which show up as custom buttons in the action drawer for easily capturing items in your org file
* August 12th, 2018
** Native support for tables!
| ta | da |
|----+----|
| 🎉 | 🎊 |
*** Tables will now be rendered as HTML tables
*** When a table cell is selected, the action drawer will populate with additional actions to manipulate tables (more details on this in the sample file)
*** Format specifiers (like <r> and <10>) aren't yet natively supported
* August 9th, 2018
** Improved navigation with back buttons a la an iOS UINavigationController
* August 6th, 2018
** Implemented new setting to store settings in a .org-web-config.json file in your Dropbox. This will keep settings in sync across multiple devices.
* August 2nd, 2018
** Added keyboard shortcuts, as well as a way to set custom bindings