@@ -33,10 +33,11 @@ The next two buttons in the action drawer edit the header and description respec
 *** The next button "focuses" on a header, hiding all others and promoting it to the top level.
 *** This is purely visual - your org file isn't affected under the hood. Press the button again to "unfocus".
 ** Syncing
-*** The upload button pushes your changes up to Dropbox
-*** The download button pulls down the latest version of the file from Dropbox
-*** Neither of those buttons are enabled in this demo :)
-*** On the settings screen (gear icon in the upper right hand corner when signed in), you can enable "Live sync", which will push changes up to Dropbox as soon as you make them
+*** The "cloud" button syncs changes to Dropbox
+*** If there's a newer version on the server and no local changes, it'll pull
+*** If there's no newer version on the server and there are local changes, it'll push
+*** Otherwise, it'll ask what you want to do
+*** This button isn't enabled in this demo :)
 ** Undoing
 *** The undo button will appear up in the header bar when you're signed in (it's not enabled in this sample).
 *** This works just like Emacs-style undo: your history is completely linear and you can "undo undos".
