@@ -1,3 +1,5 @@
+* September 2nd, 2018
+** Replaced "push" and "pull" buttons with a single "sync" button
 * August 31st, 2018
 ** Added mini action drawer to selected headers for easier access to edit and focus buttons
 * August 30th, 2018
